--- a/app/src/main/res/layout/article_element_video.xml
+++ b/app/src/main/res/layout/article_element_video.xml
@@ -38,7 +38,7 @@
 
     <!--temp: use html5 video player instead of writing our own-->
     <!--webview bugs out when in a height=wrap_content parent-->
-    <FrameLayout
+  <!--  <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -46,5 +46,9 @@
             android:id="@+id/video_html"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </FrameLayout>
+    </FrameLayout>-->
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/exo_player"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"/>
 </FrameLayout>
